// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Component allows external props to be added 1`] = `
<WithStyles(HvModal)
  disableBackdropClick={true}
  disableEscapeKeyDown={true}
  onClose={[MockFunction]}
  open={true}
>
  Modal Content
</WithStyles(HvModal)>
`;

exports[`Modal Component allows external styles to be added 1`] = `
<WithStyles(HvModal)
  classes={
    Object {
      "background": "testClassBackground",
      "closeButton": "testClassCloseButton",
      "paper": "testClassPaper",
      "root": "testClassRoot",
    }
  }
  open={true}
>
  Modal Content
</WithStyles(HvModal)>
`;

exports[`Modal Component should render correctly if closed 1`] = `
<WithStyles(HvModal)
  onClose={[MockFunction]}
  open={false}
>
  Modal Content
</WithStyles(HvModal)>
`;

exports[`Modal Component should render correctly if opened 1`] = `
<WithStyles(HvModal)
  onClose={[MockFunction]}
  open={true}
>
  Modal Content
</WithStyles(HvModal)>
`;

exports[`Modal withStyles should render correctly 1`] = `
<WithStyles(HvModal)>
  Modal Content
</WithStyles(HvModal)>
`;
